Style - fix layout issue in pricing-tables

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1804,6 +1804,9 @@ small {
   text-transform: capitalize;
 }
 
+.pricing-card-title small {
+  font-size: 0.9rem;
+}
 /*  ************************************************************************************
   Privacy
 ****************************************************************************************/
